# RDS-Project-2022-1

./: .gitignore  Dockerfile  README.md  RoDS-Reddit-bot.ipynb  cronjob.sh  main.py  makefile  pyproject.toml  report.py  requirements.txt  setup.py
docs/: Social-Influence-Project-RCT.ipynb
src/: __init__.py  database.py  database_models.py  mail.py  reddit_bot.py  stats.py  utils.py
