[tool.poetry]
name = "rds-project-2022-1"
version = "0.1.0"
description = ""
authors = [""]
license = "GPL3.0"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.3.0"
praw = "^7.5.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
