[tool.poetry]
name = "rds-project-2022-1"
version = "0.1.0"
description = ""
authors = [""]
license = "GPL3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyterlab = "^3.3.0"
praw = "^7.5.0"
sqlmodel = "^0.0.6"
plotly = "^5.6.0"
pandas = "^1.4.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
